# graphic_vector_editor

./: CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8hpp.html  app_8hpp__dep__incl.map  app_8hpp__dep__incl.md5  app_8hpp_source.html  canvas_8cpp.html  canvas_8cpp__incl.map  canvas_8cpp__incl.md5  canvas_8hpp.html  canvas_8hpp__dep__incl.map  canvas_8hpp__dep__incl.md5  canvas_8hpp__incl.map  canvas_8hpp__incl.md5  canvas_8hpp_source.html  classBigHelper_1_1State-members.html  classBigHelper_1_1State.html  classBigHelper_1_1StateManager-members.html  classBigHelper_1_1StateManager.html  classBigHelper_1_1State__inherit__graph.map  classBigHelper_1_1State__inherit__graph.md5  classGVEditor_1_1App-members.html  classGVEditor_1_1App.html  classGVEditor_1_1Canvas-members.html  classGVEditor_1_1Canvas.html  classGVEditor_1_1Canvas__coll__graph.map  classGVEditor_1_1Canvas__coll__graph.md5  classGVEditor_1_1Canvas__inherit__graph.map  classGVEditor_1_1Component-members.html  classGVEditor_1_1Component.html  classGVEditor_1_1Component__inherit__graph.map  classGVEditor_1_1Component__inherit__graph.md5  classGVEditor_1_1DLine-members.html  classGVEditor_1_1DLine.html  (+688 more)
.github/workflows/: docs.yml  release.yml
libs/: CMakeLists.txt
libs/BigHelper/: CMakeLists.txt
libs/BigHelper/include/: state.h  state_manager.h
libs/BigHelper/src/: state_manager.cpp
libs/Utility/: CMakeLists.txt
libs/Utility/include/UI/: component.hpp  container.hpp
libs/Utility/include/files/: file_service.h  file_service.hpp
libs/Utility/include/random/: random.hpp
libs/Utility/include/states/: state.h  state.hpp  state_manager.h  state_manager.hpp
libs/Utility/src/UI/: container.cpp
libs/Utility/src/files/: file_service.cpp
libs/Utility/src/states/: state.cpp  state_manager.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+61 more)
src/: app.cpp  app.hpp  main.cpp
src/UI/: component.hpp  layout.cpp  layout.hpp  window.cpp  window.hpp
src/UI/components/: canvas.cpp  canvas.hpp  horizontal_container.hpp  horizontal_layout.hpp  label.cpp  label.hpp  menu.cpp  menu.hpp  vertical_container.hpp  vertical_layout.hpp  window.cpp  window.hpp
src/UI/views/: edit_view.cpp  edit_view.hpp  init_view.cpp  init_view.hpp  view.hpp  welcome_view.cpp  welcome_view.hpp
src/constants/: title_helper.hpp  ui_helper.hpp
src/data/: document.cpp  document.hpp  storage.cpp  storage.hpp
src/models/: edit_model.cpp  edit_model.hpp  init_model.cpp  init_model.hpp  window_model.cpp  window_model.hpp
src/serializers/: document_serializer.cpp  document_serializer.hpp  serializer.hpp
src/shapes/: line.cpp  line.hpp  polygon.cpp  polygon.hpp  shape.hpp
src/shapes/drawable/: dline.cpp  dline.hpp  dpolygon.cpp  dpolygon.hpp  dshape.cpp  dshape.hpp  dshape_helper.hpp
src/states/: state_helper.h  state_helper.hpp
src/states/edit_state/: edit_state.cpp  edit_state.hpp
src/states/edit_state/controllers/: edit_controller.cpp  edit_controller.hpp
src/states/edit_state/models/: edit_model.hpp
src/states/exit_state/: exit_state.cpp  exit_state.hpp
src/states/exit_state/controllers/: exit_controller.cpp  exit_controller.hpp
src/states/init_state/: init_state.cpp  init_state.h  init_state.hpp
src/states/init_state/controllers/: init_controller.cpp  init_controller.hpp
src/states/init_state/models/: init_model.cpp  init_model.hpp
tests/: editor.cpp
